syntax = "proto3";

option go_package = "internal/grpc;grpc";

package grpc;

service ApiBookService {
  rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
  rpc GetBookById(GetBookByIdRequest) returns (GetBookByIdResponse);
  rpc AddBook(Book) returns (AddBookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}

message GetBooksRequest {}

message GetBookByIdRequest {
  string id = 1;
}

message GetBooksResponse {
  repeated Book books = 1;
}

message GetBookByIdResponse {
  Book book = 1;
}

message Book {
  string id = 1;
  string author = 2;
  string name = 3;
  string price = 4;
}

message AddBookResponse {
  string id = 1;
  string author = 2;
  string name = 3;
  string price = 4;
}

message UpdateBookRequest {
  string id = 1;
  string author = 2;
  string name = 3;
  string price = 4;
}

message UpdateBookResponse {
  string id = 1;
  string author = 2;
  string name = 3;
  string price = 4;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  string id = 1;
}
